@@ -2658,14 +2658,28 @@ UPDATE_CALLS_ORIGINATE_RESPONSE;
                  * para poder usarlo al mandar la llamada a hold, y para reconocer
                  * la llamada que hay que recoger de vuelta. */
                 $oPredictor = new Predictivo($this->_astConn);
-                $estadoCola = $oPredictor->leerEstadoCola(''); // El parámetro vacío lista todas las colas
-                if (isset($estadoCola['members'][$sAgentNum]) && 
-                    isset($estadoCola['members'][$sAgentNum]['clientchannel'])) {
-                	$this->_infoLlamadas['llamadas'][$sKey]->ActualChannel = $estadoCola['members'][$sAgentNum]['clientchannel']; 
-                } else {
+
+                /* Se requiere un bucle porque aparentemente, incluso luego de
+                 * recibir el evento OnLink, puede ocurrir que no se haya 
+                 * actualizado todavía el estado del agente en 'agent show'.
+                 * Por el hecho de haber entrado aquí, se sabe que está enlazado
+                 * con un canal. Se reintenta hasta 5 veces si no se puede a la
+                 * primera. */
+                $r = 0;
+                $this->_infoLlamadas['llamadas'][$sKey]->ActualChannel = NULL;
+                do {
+                    $r++;
+                    $estadoCola = $oPredictor->leerEstadoCola(''); // El parámetro vacío lista todas las colas
+                    if (isset($estadoCola['members'][$sAgentNum]) && 
+                        isset($estadoCola['members'][$sAgentNum]['clientchannel'])) {
+                        $this->_infoLlamadas['llamadas'][$sKey]->ActualChannel = $estadoCola['members'][$sAgentNum]['clientchannel']; 
+                    } else {
+                        usleep(100000); // 0.1 segundos
+                    }                	
+                } while ($r < 5 && is_null($this->_infoLlamadas['llamadas'][$sKey]->ActualChannel));
+                if (is_null($this->_infoLlamadas['llamadas'][$sKey]->ActualChannel)) {
                     $this->oMainLog->output("WARN: $sEvent: no se puede reconocer clientchannel para ".
-                        "agente $sAgentNum: estado cola es: ".print_r($estadoCola, 1));
-                	$this->_infoLlamadas['llamadas'][$sKey]->ActualChannel = NULL;
+                        "agente $sAgentNum luego de $r intentos: estado cola es: ".print_r($estadoCola, 1));
                 }
                 
                 // El canal verdadero es más util que Local/XXX para las operaciones
