@@ -1,3 +1,5 @@
+* Dialer: try harder to find client channel the agent is talking to. Apparently
+  OnLink may be received before 'agent status' is properly updated.
 * Dialer: at hangup, the check for scheduled calls requires access to campaign
   data, but the campaign may already have ended, so it might not be in the
   campaign array. Read campaign data from database if required.
